# Lexical-Analyzer-Generator

./: .gitignore  CMakeLists.txt  README.md  Test_4.txt  Test_5_WithError.txt  example.txt  main.cpp  main_1.cpp  main_2.cpp  min_dfa_graph  test_program.txt
Bonus_Part_Flex/: Bonus.l
DFA/: DFA.cpp  DFA.h  EpsilonNFA.cpp  EpsilonNFA.h  Epslon_NFA_NFA.cpp  Epslon_NFA_NFA.h  HelpingMethods.cpp  HelpingMethods.h  TESTNFA.cpp  TestCase_1.cpp  TestCase_2.cpp  TestCase_SepareteEpslon.cpp
DFAMinimizer/: DFAMinimizer.cpp  DFAMinimizer.h
DFASerialization/: DFASerialization.cpp  DFASerialization.h
DFA_MIN/: DFA_minimizer.cpp  DFA_minimizer.h
DFA_Serialization/: DFA_serialization.cpp  DFA_serialization.h
LexicalAnalyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
LexicalAnalyzerGenerator/: example_program_1.txt  example_program_2.txt
LexicalAnalyzerGenerator/DFA/: DFA.h  HelpingMethods.cpp
LexicalAnalyzerGenerator/LexicalAnalyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
LexicalAnalyzerGenerator/LexicalRules/: Node.cpp  Node.h  RuleParser.cpp  RuleParser.h  RuleTree.cpp  RuleTree.h
LexicalAnalyzerGenerator/NFA/: NFAConstruction.cpp
LexicalAnalyzerGenerator/Visualization/: Visualization.cpp  Visualization.h
LexicalRules/: Node.cpp  Node.h  RuleParser.cpp  RuleTree.cpp  RuleTree.h
Lexical_Analyzer/: 2018_q2.txt  LexicalAnalyzer.cpp
NFA/: NFAConstruction.cpp  NFAConstruction.h
ParserGenerator/: README.md  example_rules.txt  example_rules2.txt  example_rules3.txt  example_rules4.txt  input_program.txt  main.cpp  parserGenerator.cpp  parsing.cpp
ParserGenerator/Definition/: Definition.cpp  Definition.h
ParserGenerator/FirstAndFollow/: First.cpp  First.h  Follow.cpp  Follow.h
ParserGenerator/Main/: main.cpp  parserGeneration.cpp  parsing.cpp
ParserGenerator/Parser/: Parser.cpp  Parser.h  ParserUsageExample.cpp  README.md
ParserGenerator/Parser/ParseTree/: ParseTreeNode.cpp  ParseTreeNode.h
ParserGenerator/ParsingCFG/: AdaptCFG.cpp  AdaptCFG.h  ParsingCFG.cpp  ParsingCFG.h
ParserGenerator/Predictive_PT/: PPT.cpp  PPT.h  TestCase2.cpp  TrailExample.cpp  TrailExample.h
Visualization/: DFA_visualization.cpp  Visualization.cpp  dfa_graph_export  dfa_table_export.txt  visualization.cpp
results/analyzer/: out.txt  out.verbose.txt
results/generator/: min_dfa_table.txt  nfa_graph.dot
src/LexicalRules/: Node.cpp  Node.h  RuleTree.cpp  RuleTree.h
